cleaned up the styling for modal

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -217,19 +217,25 @@
         <div id="modalBG">
             <div class="grid" id="productModal">
                     <div id="rightContent">
-                        <img src = "img/illestevaBackground.jpg"alt="man with sunglasses">
+                        <img id="storyBackground" src = "img/modal/mensLeonards1_2.jpg"alt="man with sunglasses">
                         <div class="closeBtn">X</div>
+                        <div id="glassStoryShots">
+                            <div><img id="leonardsStory" src="img/modal/mensLeonards1_2.jpg" /></div>
+                            <div><img id="leonardsTwoStory" src="img/modal/Leonards2.jpg" /></div>
+                            <div><img id="leonardsThreeStory" src="img/modal/mensLeonards3.jpg" /></div>
+                             
+                        </div>
                     </div>
 
                     <div id="leftContent">
                          <!--ACTUAL CONTENT ON TOP-->
                         <div class="onTop">
-                            <div style="height:100%;width:100%;" class="eyeGlassContainer">
-                                <div style="width:100%;height:60%;" id="blueGlasses">
-                                <img src= "img/Leonard.jpg"alt="golden frame sunglasses">
+                            <div class="eyeGlassContainer">
+                                <div id="blueGlasses">
+                                <img src= "img/modal/Leonard.png"alt="golden frame sunglasses">
                                 </div>
-                                <div id="clearGlasses" style="width:100%;height:60%;">
-                                <img src= "img/modal/clearLeonards.jpg"alt="Clear Leonards">
+                                <div id="clearGlasses">
+                                <img src= "img/modal/clearLeonards.png"alt="Clear Leonards">
                                 </div>
                                 <div id="swatchesContainer">
                                     <div id="blue"></div>
@@ -237,7 +243,7 @@
                                 </div>
                                 <div class="productText">
                                     <h2>Leonards</h2>
-                                    <h5>$500.000</h5>
+                                    <h3>$175.00</h3>
                                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                                 </div>
                                 <div id="addBtn"><h3>ADD TO BAG</h3></div>
@@ -245,7 +251,7 @@
                             <div id="reviewSection">
                                 <div id="productPreviewText">
                                     <h2>LEONARDS</h2>
-                                    <h4>$400.00</h4>
+                                    <h3>$400.00</h3>
                                     <div id="rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -260,7 +266,7 @@
                                         <img src="img/uiFaces/kathleen.jpg" style="border-radius:50%;" />
                                      </div>
                                      <div>
-                                        <h5 class="userProfileText">SARAH WEAVER</h5>
+                                        <h5 class="userProfileText">JUDY GOSLING</h5>
                                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                                         <div id="rating" class="userProfileText">
                                         <i class="fa fa-star"></i>
@@ -274,7 +280,7 @@
                                         <img src="img/uiFaces/jasmine.jpg" style="border-radius:50%;" />
                                      </div>
                                      <div>
-                                        <h5 class="userProfileText">YVONNE QUETON</h5>
+                                        <h5 class="userProfileText">SONYA LEVINE</h5>
                                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                                         <div id="rating" class="userProfileText">
                                         <i class="fa fa-star"></i>
