added all the glass listing glasses

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -105,76 +105,86 @@
                 <div class="row">
                     <div class="col-4of12" id="leonards">
                         <img src="img/Leonard.jpg" />
-                        <h3>Leonard Classic</h3>
+                        <h3>Leonard | Classic</h3>
                         <h4>$500.00</h4>
                     </div>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/Milan.jpg" />
-                        <h3>Milan Lounge</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/LeonardsClearS.jpg" />
+                        <h3>Leonards | Clear</h3>
+                        <h4>$390.00</h4>
                     </div>
                     </a>
                      <a href="">
                     <div class="col-4of12">
-                        <img src="img/Rectangles.jpg" />
-                        <h3>Rectangles</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/LeonardsHalf.jpg" />
+                        <h3>Leonards | Half</h3>
+                        <h4>$150.00</h4>
                     </div>
                     </a>
                 </div>
                 <div class="row">
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/Leonard.jpg" />
-                        <h3>Leonard Classic</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/LeonardsPolarized.jpg" />
+                        <h3>Leonards | Polar</h3>
+                        <h4>$200.00</h4>
                     </div>
                     </a>
-                    <a href="">
                     <div class="col-4of12">
-                        <img src="img/Milan.jpg" />
-                        <h3>Milan Lounge</h3>
+                        <img src="img/glassListing/leonardsRound.jpg" />
+                        <h3>Leonards | Round</h3>
                         <h4>$500.00</h4>
                     </div>
-                    </a>
+                    <div class="col-4of12" id="leonards">
+                        <img src="img/glassListing/leonardsToohey.jpg" />
+                        <h3>Leonards | Tohey</h3>
+                        <h4>$890.00</h4>
+                    </div>
                 </div>
             </section>
             <section id="milansSection" style="width:100%;height:100%">
                 <div class="row">
                     <div class="col-4of12" id="leonards">
-                        <img src="img/Leonard.jpg" />
-                        <h3>Milans Classic</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/milanClassic.jpg" />
+                        <h3>Milan | Classic</h3>
+                        <h4>$900.00</h4>
                     </div>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/Milan.jpg" />
-                        <h3>Milan Lounge</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/milanCapri.jpg" />
+                        <h3>Milan | Capri</h3>
+                        <h4>$390.00</h4>
                     </div>
                     </a>
                      <a href="">
                     <div class="col-4of12">
-                        <img src="img/Rectangles.jpg" />
-                        <h3>Rectangles</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/milanLine.jpg" />
+                        <h3>Milan | Line</h3>
+                        <h4>$290.00</h4>
                     </div>
                     </a>
                 </div>
                 <div class="row">
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/Leonard.jpg" />
-                        <h3>Leonard Classic</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/milanMatte.jpg" />
+                        <h3>Milan | Matte</h3>
+                        <h4>$170.00</h4>
                     </div>
                     </a>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/Milan.jpg" />
-                        <h3>Milan Lounge</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/milanShape.jpg" />
+                        <h3>Milan | Shape</h3>
+                        <h4>$70.00</h4>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="col-4of12">
+                        <img src="img/glassListing/milanSolid.jpg" />
+                        <h3>Milan | Solid</h3>
+                        <h4>$530.00</h4>
                     </div>
                     </a>
                 </div>
@@ -182,31 +192,45 @@
             <section id="waversSection" style="width:100%;height:100%">
                 <div class="row">
                     <div class="col-4of12" id="leonards">
-                        <img src="img/Leonard.jpg" />
-                        <h3>WAVERS Classic</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/waversClassic.jpg" />
+                        <h3>Wavers | Classic</h3>
+                        <h4>$170.00</h4>
                     </div>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/Milan.jpg" />
-                        <h3>Milan Lounge</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/waversClear.jpg" />
+                        <h3>Wavers | Clear</h3>
+                        <h4>$690.00</h4>
                     </div>
                     </a>
                      <a href="">
                     <div class="col-4of12">
-                        <img src="img/Rectangles.jpg" />
-                        <h3>Rectangles</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/waversDior.jpg" />
+                        <h3>Wavers | Dior</h3>
+                        <h4>$990.00</h4>
                     </div>
                     </a>
                 </div>
                 <div class="row">
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/Leonard.jpg" />
-                        <h3>Leonard Classic</h3>
-                        <h4>$500.00</h4>
+                        <img src="img/glassListing/waversDior2.jpg" />
+                        <h3>Wavers | Style</h3>
+                        <h4>$270.00</h4>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="col-4of12">
+                        <img src="img/glassListing/waversLine.jpg" />
+                        <h3>Wavers | Line</h3>
+                        <h4>$470.00</h4>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="col-4of12">
+                        <img src="img/glassListing/waversPrada.jpg" />
+                        <h3>Wavers | Solid</h3>
+                        <h4>$550.00</h4>
                     </div>
                     </a>
                 </div>
