final touches to hamburger menu for mobile on index page

--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
 				</li>
 
 			</ul>
+			<ul class="mobileProductNav">
+				<li><a href="#">Collaborations</a></li>
+				<li><a href="#">Trending</a></li><br />
+				<li><a href="mensStyle.html">Mens</a></li>
+				<li><a href="#">Womens</a></li>
+				<li><a href="#">Bags</a></li>
+			</ul>
 		</nav>
 		<!--Product Navigation-->
 		<nav id="productNav">
@@ -138,7 +145,6 @@
 					<li><a href="#">Trending</a></li><br />
 					<li><a href="mensStyle.html">Mens</a></li>
 					<li><a href="#">Womens</a></li>
-					<li><a href="#">Umbrellas</a></li>
 					<li><a href="#">Bags</a></li>
 				</ul>
 			</div>
