added fix nav Bar with glasses

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -28,6 +28,11 @@
             <div id="logo">
                 <a href="index.html"><img src="img/illestevaLogo.jpg" alt="illesteva logo"/></a>
             </div>
+            <div id="fixedGlassNav">
+                <div class="fixedGlassContainer"><img src="img/Leonard.jpg" /></div>
+                <div class="fixedGlassContainer"><img src="img/Leonard.jpg" /></div>
+                <div class="fixedGlassContainer"><img src="img/Leonard.jpg" /></div>
+            </div>
             <ul class="customerInfoContainer">
                 <li><a class="contact-bg dd-toggle">SIGN IN</a>
                     <ul class="dd-hidden">
