check out page linked

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								<p class="tax">Plus 12%: $24</p>
 								<div class="total">Total:$224.00</div>
 
-						   		<div class="checkoutButton">Checkout</div>
+						   		<a href="checkout.html"><div class="checkoutButton">Checkout</div></a>
 						</div></li>
 
 					</ul>
