made the whole mens palge mobile

--- a/index.html
+++ b/index.html
@@ -131,10 +131,11 @@
 			</ul>
 			<ul class="mobileProductNav">
 				<li><a href="#">Collaborations</a></li>
-				<li><a href="#">Trending</a></li><br />
-				<li><a href="mensStyle.html">Mens</a></li>
-				<li><a href="#">Womens</a></li>
-				<li><a href="#">Bags</a></li>
+                <li><a href="mensStyle.html">Mens</a></li>
+                <li><a href="#">Womens</a></li>
+                <li><a href="#">Bags</a></li><br />
+                <li><a href="#">Sign In</a></li>
+                <li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 		<!--Product Navigation-->
