--- a/leonardsMobile.html
+++ b/leonardsMobile.html
@@ -13,18 +13,19 @@
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mensProductList.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
+     <link rel="stylesheet" href="css/leonardMobileStyle.css">
 
 	<title>Illesteva | Mens Style.</title>
 	</head>
 	<body>
-            <!--borders-->
+           <!--borders-->
         <div class="leftBorder"></div>
         <div class="rightBorder"></div>
         <div class="bottomBorder"></div>
         <!--Top Navigation w/ Bag-->
         <!--Top Navigation w/ Bag-->
         <nav id="customerInfoNav">
-            <a id="nav-toggle" href="#"><span></span></a>
+           <a href="mensStyle.html"><span id="backIcon"><i class="fa fa-angle-left"></i></span></a>
             <div id="logo">
                 <a href="index.html"><img src="img/illestevaLogo.jpg" alt="illesteva logo"/></a>
             </div>
@@ -134,83 +135,9 @@
                 </li>
 
             </ul>
-            <ul class="mobileProductNav">
-                <li><a href="#">Collaborations</a></li>
-                <li><a href="mensStyle.html">Mens</a></li>
-                <li><a href="#">Womens</a></li>
-                <li><a href="#">Bags</a></li><br />
-                <li><a href="#">Sign In</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
         </nav>
 
-        <!--Product Navigation-->
-        <nav id="productNav">
-            <div id="navContainer">
-                <ul>
-                    <li><a href="#">Collaborations</a></li>
-                    <li><a href="#">Trending</a></li><br />
-                    <li><a href="mensStyle.html">Mens</a></li>
-                    <li><a href="#">Womens</a></li>
-                    <li><a href="#">Umbrellas</a></li>
-                    <li><a href="#">Bags</a></li>
-                </ul>
-            </div>
-        </nav>
-
-        <!--Shopping Bag-->
-        <!--
-        <div id="shoppingBag">
-            <div id="bagContainer">
-                <div class="itemContainer">
-                   <img src="img/Milan.jpg" />
-                   <div>
-                    <h4>Leonards</h4>
-                    <h5>500.00</h5>
-                   </div>
-                   <span>-</span>
-                </div>
-            </div>
-        </div>-->
-        <!--Recommended Styles-->
-        <div class="container glassStyles">
-            <div class="row">
-                <div class="col-4of12 styleContainers" id="Leonards">
-                    <div class="styleContainer">
-                        <div class="styleInfoContainer">
-                            <h4>LEONARDS</h4>
-                            <p>Versatile Style</p>
-                        </div>
-                        <img class="leonardsDesktop" src="img/winterIllesteva.jpg" />
-                       <a href="leonardsMobile.html" target=new><img class="leonardsMobile" src="img/winterIllestevaMobile.jpg" /></a>
-                    </div>
-                    <div class="seeMoreBtn" id="leonardBtn"><h4>SEE MORE</h4></div>
-                </div>
-                <div class="col-4of12 styleContainers" id="Milan">
-                    <div class="styleContainer">
-                            <div class="styleInfoContainer">
-                                <h4>MILANS</h4>
-                                <p>High Style</p>
-                            </div>
-                        <img class="milanDekstop" src="img/casualIllesteva.jpg" />
-                        <a href="leonardsMobile.html"><img class="milanMobile" src="img/casualIllestevaMobile.jpg" /><a/>
-                    </div>
-                        <div class="seeMoreBtn" id="milanBtn"><h4>SEE MORE</h4></div>
-                </div>
-                <div class="col-4of12 styleContainers" id="Wavers">
-                    <div class="styleContainer">
-                            <div class="styleInfoContainer">
-                                <h4>WAVERS</h4>
-                                <p>Casual Style</p>
-                            </div>
-                       <img class="waversDesktop" src="img/boardingillesteva.jpg" />
-                       <a href="leonardsMobile.html"><img class="waversMobile" src="img/boardingillestevaMobile.jpg" /></a>
-                    </div>
-                       <div class="seeMoreBtn" id="waversBtn"><h4>SEE MORE</h4></div>
-                </div>
-            </div>
-        </div>
-        <!--Glass Listings-->
+<!--Glass Listings-->
         <div class="container glassListing">
             <section id="leonardsSection" style="width:100%;height:100%">
                 <div class="row">
@@ -254,98 +181,6 @@
                     </div>
                 </div>
             </section>
-            <section id="milansSection" style="width:100%;height:100%">
-                <div class="row">
-                    <div class="col-4of12" id="leonards">
-                        <img src="img/glassListing/milanClassic.jpg" />
-                        <h3>Milan | Classic</h3>
-                        <h4>$900.00</h4>
-                    </div>
-                    <a href="">
-                    <div class="col-4of12">
-                        <img src="img/glassListing/milanCapri.jpg" />
-                        <h3>Milan | Capri</h3>
-                        <h4>$390.00</h4>
-                    </div>
-                    </a>
-                     <a href="">
-                    <div class="col-4of12">
-                        <img src="img/glassListing/milanLine.jpg" />
-                        <h3>Milan | Line</h3>
-                        <h4>$290.00</h4>
-                    </div>
-                    </a>
-                </div>
-                <div class="row">
-                    <a href="">
-                    <div class="col-4of12">
-                        <img src="img/glassListing/milanMatte.jpg" />
-                        <h3>Milan | Matte</h3>
-                        <h4>$170.00</h4>
-                    </div>
-                    </a>
-                    <a href="">
-                    <div class="col-4of12">
-                        <img src="img/glassListing/milanShape.jpg" />
-                        <h3>Milan | Shape</h3>
-                        <h4>$70.00</h4>
-                    </div>
-                    </a>
-                    <a href="">
-                    <div class="col-4of12">
-                        <img src="img/glassListing/milanSolid.jpg" />
-                        <h3>Milan | Solid</h3>
-                        <h4>$530.00</h4>
-                    </div>
-                    </a>
-                </div>
-            </section>
-            <section id="waversSection" style="width:100%;height:100%">
-                <div class="row">
-                    <div class="col-4of12" id="leonards">
-                        <img src="img/glassListing/waversClassic.jpg" />
-                        <h3>Wavers | Classic</h3>
-                        <h4>$170.00</h4>
-                    </div>
-                    <a href="">
-                    <div class="col-4of12">
-                        <img src="img/glassListing/waversClear.jpg" />
-                        <h3>Wavers | Clear</h3>
-                        <h4>$690.00</h4>
-                    </div>
-                    </a>
-                     <a href="">
-                    <div class="col-4of12">
-                        <img src="img/glassListing/waversDior.jpg" />
-                        <h3>Wavers | Dior</h3>
-                        <h4>$990.00</h4>
-                    </div>
-                    </a>
-                </div>
-                <div class="row">
-                    <a href="">
-                    <div class="col-4of12">
-                        <img src="img/glassListing/waversDior2.jpg" />
-                        <h3>Wavers | Style</h3>
-                        <h4>$270.00</h4>
-                    </div>
-                    </a>
-                    <a href="">
-                    <div class="col-4of12">
-                        <img src="img/glassListing/waversLine.jpg" />
-                        <h3>Wavers | Line</h3>
-                        <h4>$470.00</h4>
-                    </div>
-                    </a>
-                    <a href="">
-                    <div class="col-4of12">
-                        <img src="img/glassListing/waversPrada.jpg" />
-                        <h3>Wavers | Solid</h3>
-                        <h4>$550.00</h4>
-                    </div>
-                    </a>
-                </div>
-            </section>
         </div>
 
         <!--Modal-->
@@ -382,6 +217,7 @@
                                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                                 </div>
                                 <div id="addBtn"><h3>ADD TO BAG</h3></div>
+                                <div id="comments"><h4>View Comments</h4></div>
                             </div>
                             <div id="reviewSection">
                                 <div id="productPreviewText">
@@ -394,7 +230,6 @@
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star-o"></i>
                                     </div>
-                                    <div id="addBtn"><h3>ADD TO BAG</h3></div>
                                 </div>
                                 <div id="userContainer">
                                     <div class="userProfiles">
@@ -467,7 +302,6 @@
    <script src="js/jquery.js"></script>
     <script src="js/drop-downs.js"></script>
      <script src="js/productListingModal.js"></script>
-     <script src="js/fixedNav.js"></script>
      <script src="js/hamburger.js"></script>
     <script src="js/animatedDD.js"></script>
     </body>
