fixed checkout and contact us styling for mobile

--- a/checkout.html
+++ b/checkout.html
@@ -152,6 +152,7 @@
 				<div class="LogInSection">
 					
 					<div class="fieldset2">
+					<h2 class="fs-title">Checkout</h2>
 						<!----->	
 						<div class="emailSection">
 							<div class="headerCat"><h4>Enter Your Email</h4></div>
