--- a/contactMobile.html
+++ b/contactMobile.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
-	<title>Illesteva | Made in Italy.</title>
+	<title>Illesteva | Contact Us</title>
 	</head>
 	<body>
 		
@@ -151,7 +151,7 @@
 			<div class="col-4of12">
 				<div class="LogInSection">
 					<div class="fieldset2">
-						<h2 class="fs-title">Question/Comment?</h2>
+						<h2 class="fs-title">Questions or Comments?</h2>
 						  <div class="inputwrapper"> 
 							<h5>Name</h5>
 							<input type="text" class="form" placeholder="Jane Doe">
